src/objects/Footer_Link__mdt.object
<CustomObject>
    <description>This custom setting will contain the href, target, label to display on the footer section on the SIB_Template page.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will define whether or not the link should display on the template page.</description>
        <inlineHelpText>This field will define whether or not the link should display on the template page.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>This field will house the target you wish to display in the &quot;target&quot; on the &lt;a&gt; tag. Please note: values from the following link are valid markup:

https://www.w3schools.com/tags/att_a_target.asp</description>
        <inlineHelpText>This field will house the target you wish to display in the &quot;target&quot; on the &lt;a&gt; tag. Please note: values from the following link are valid markup:

https://www.w3schools.com/tags/att_a_target.asp</inlineHelpText>
        <label>Target</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>This field will house the URL you wish to display in the &quot;href&quot; tag on the &lt;a&gt; tag.</description>
        <inlineHelpText>This field will house the URL you wish to display in the &quot;href&quot; tag on the &lt;a&gt; tag.</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Footer Link</label>
    <pluralLabel>Footer Links</pluralLabel>
</CustomObject>